# pyezkl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  pytest.yml  tagging.yml
examples/: ezkl_demo.ipynb
examples/export/: leakyrelu.py
examples/export_examples/: tutorial.py
examples/mlp/: mlp_relu.py
ezkl/: __init__.py  export.py  scale_util.py
test/: input.json  network.onnx  test_export.py  test_integration_1.py  test_pav.py
test/data/: 1_X_test.csv  1_X_train.csv  1_y_test.csv  1_y_train.csv
test/test_scale/: input_original.json  input_scaled.json  setting.json
